# Scientific_Calculator

./: CMakeLists.txt  README.md  images.qrc
Forms/: mainwindow.ui
Header_Files/: CalculateExpression.h  mainwindow.h
Source_Files/: CalculateExpression.cpp  mainwindow.cpp
build_linux/: .ninja_deps  .ninja_log  CMakeCache.txt  Scientific_Calculator  build.ninja  cmake_install.cmake
build_linux/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_linux/Scientific_Calculator_autogen/: deps
build_linux/Scientific_Calculator_autogen/EWIEGA46WW/: qrc_images.cpp
build_linux/Scientific_Calculator_autogen/RBYB5VKSNZ/: moc_mainwindow.cpp.d
build_linux/Scientific_Calculator_autogen/include/: ui_mainwindow.h
build_windows/: CMakeCache.txt  Makefile
build_windows/.qt/: QtDeploySupport.cmake
build_windows/Scientific_Calculator_autogen/: mocs_compilation.cpp
build_windows/Scientific_Calculator_autogen/RBYB5VKSNZ/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
